--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-APP_PORT=
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
 
-BCRYPT=""
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="database://username:password@localhost:3306/forlokers"
+APP_PORT=5000
+
+BCRYPT="12345"
+
+DATABASE_URL="mysql://root:@localhost:3306/forlokers"
+
+JWT_SECRET=forlokersSecretKey2023!!
