--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-APP_PORT=5000
+APP_PORT=
 
-BCRYPT="12345"
+BCRYPT=""
 
-DATABASE_URL="mysql://root:@localhost:3306/forlokers"
+DATABASE_URL=""
 
-JWT_SECRET=forlokersSecretKey2023!!
+JWT_SECRET=
